2.2

  * Added AutoMatchBracket to indicate visible matching {}, (), [], <> pairs.

  * Bookmarks now remember/restore their vertical offest in the window.

  * New GotoNextBookmark and GotoPrevBookmark commands cycle through your bookmarks.

  * Mention http://groups.google.com/group/niceeditor in splash screen.

  * About now displays splash screen in addition to its status bar message.

  * In FastGUI mode, when highlighting menu items the cursor is now
    positioned on the border of the menu rather then on the first letter
    of menu items.

2.1

  * New commands: KeyCode, DeleteNextWord, DeletePrevWord, AutoComplete,
    InsertTab, Tabs, RequestOrder.

  * Now we set the syntax when a file is saved with a (different) name.

  * Now we highlight correctly control characters in the command line.

  * Display request lists by columns ("RequestOrder 1") or rows ("RequestOrder 0").

  * Allow window resizing during requests (file selection, help, AutoComplete).

  * Sort filenames in dictionary order ("aa", "Ab", "ac", ...).

  * Enter in Help places you on the right command in the command list.

  * Only prompt once about identical filenames on startup.

  * Consider "_" as a word character for word-oriented commands.

  * Built-in filename extension to syntax mapping updates:
    dtx -> tex, latex -> tex,  sage -> python.

  * Include new txt2tags syntax file from http://txt2tags.sourceforge.net/

  * Replace reports the number of replacements (again).

  * Display the global directory on startup even if it is not found.
  
  * Default global directory changed from /usr/local/lib/ne to /usr/local/share/ne.
	
  * Aborting an OpenNew doesn't leave you in a new blank document.

  * AdjustView now takes optional number of lines or columns to
    adjust by; swapped meaning of AdjustView 'C' and 'M' parameters.

  * Read .keys and possibly .menus files from NE_GLOBAL_DIR on startup.

  * More defensive reading of lines/columns from terminfo to avoid crashes