@@ -52,7 +52,7 @@ enum error {
 	NOT_ON_A_BRACKET,
 	CANT_FIND_BRACKET,
 	BOOKMARK_NOT_SET,
-	BOOKMARK_OUT_OF_RANGE,
+	INVALID_BOOKMARK_DESIGNATION, 
 	CANT_INSERT_0,
 	NO_SEARCH_STRING,
 	NO_REPLACE_STRING,
